src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>MX_SB_VTS_Apellido_Materno_Contratante__c</fullName>
        <description>Apellido materno del contratante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido materno contratante</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Apellido_Paterno_Contratante__c</fullName>
        <description>Apellidos del contratante.</description>
        <label>Apellido contratante</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Codigo_Intermediario__c</fullName>
        <description>Número de cuatro dígitos del intermediario.</description>
        <label>Codigo intermediario</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Colonia__c</fullName>
        <description>Colonia del domicilio del contratante.</description>
        <label>Colonia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Familia_Productos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación a familia de producto.</description>
        <label>Familia de productos</label>
        <referenceTo>MX_WB_FamiliaProducto__c</referenceTo>
        <relationshipLabel>Presupuestos</relationshipLabel>
        <relationshipName>Presupuestos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Folio_Cotizacion__c</fullName>
        <description>Folio de la póliza.</description>
        <label>Folio Cotizacion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_GCLID__c</fullName>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Movil_txt__c</fullName>
        <description>Número de teléfono en texto para búsqueda</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Movil</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Email_txt__c</fullName>
        <description>Campo en texto para poder buscar correos de quotes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo electrónico</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Cupon__c</fullName>
        <description>Código de cupón para ASD</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código cupón</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_CreatedDate__c</fullName>
        <description>Fecha de creación para filtrar cotizaciones</description>
        <formula>DATETIMEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha Creación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Nombre_Contrante__c</fullName>
        <description>Nombre completo del contratante.</description>
        <label>Nombre Contrante</label>
        <length>30</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_Motivos_de_no_venta__c</fullName>
        <description>Motivos de no venta de la cotización.</description>
        <label>Motivos de no venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente molesto</fullName>
                </value>
                <value>
                    <fullName>No cumple políticas de contratación</fullName>
                </value>
                <value>
                    <fullName>Cliente cuelga</fullName>
                </value>
                <value>
                    <fullName>Cliente lo va a pensar</fullName>
                </value>
                <value>
                    <fullName>Cliente no tiene tiempo</fullName>
                </value>
                <value>
                    <fullName>Cliente prefiere ir a sucursal</fullName>
                </value>
                <value>
                    <fullName>Economía personal</fullName>
                </value>
                <value>
                    <fullName>No utiliza TDC / TDD</fullName>
                </value>
                <value>
                    <fullName>Precio alto del producto</fullName>
                </value>
                <value>
                    <fullName>Prefiere otros productos</fullName>
                </value>
                <value>
                    <fullName>Producto no cubre expectativas</fullName>
                </value>
                <value>
                    <fullName>Requiere mayor suma asegurada</fullName>
                </value>
                <value>
                    <fullName>Se cortó llamada</fullName>
                </value>
                <value>
                    <fullName>Agendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Nombre_Intermediario__c</fullName>
        <description>Nombre completo del intermediario.</description>
        <label>Nombre intermediario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Numero_Exterior__c</fullName>
        <description>Número exterior del domicilio del contratante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero Exterior</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Numero_Interior__c</fullName>
        <description>Número interior del domicilio del contratante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Numero Interior</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Numero_de_Poliza__c</fullName>
        <description>Numero de póliza clipert.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Numero de Poliza</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_RFC__c</fullName>
        <description>RFC del contratante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RFC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Sexo_Conductor__c</fullName>
        <description>Sexo del conductor.</description>
        <label>Sexo del Conductor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Sucursal__c</fullName>
        <formula>IF((CONTAINS(MX_SB_VTS_Cupon__c,&apos;COM&apos;) || CONTAINS(MX_SB_VTS_Cupon__c , &apos;MB&apos;)|| CONTAINS(MX_SB_VTS_Cupon__c,&apos;PAT&apos;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cupón sucursal</label>
        <type>Checkbox</type>
    </fields>
        <fields>
        <fullName>MX_SB_VTS_Codigo_verificacion__c</fullName>
        <description>Código de verificación.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código verificación</label>
        <length>5</length>
        <type>Text</type>
    </fields>
	 <fields>
        <fullName>MX_SB_VTS_FechaFin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Fin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_FechaInicio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Inicio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MX_SB_VTS_Cotizaciones_ASD</fullName>
        <columns>MX_SB_VTS_Folio_Cotizacion__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>MX_SB_VTS_Movil_txt__c</columns>
        <columns>MX_SB_VTS_Email_txt__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>MX_SB_VTS_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_VTS_Folio_Cotizacion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MX_SB_VTS_Familia_Productos__c</field>
            <operation>equals</operation>
            <value>ASD</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>QUOTE.EMAIL</field>
            <operation>notContain</operation>
            <value>@BBVA.COM</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_Sucursal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>notEqual</operation>
            <value>Emitida</value>
        </filters>
        <label>Cotizaciones ASD</label>
        <sharedTo>
            <group>MX_SB_VTS_AsesoresASD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_VTS_Cotizaciones_ASDWon</fullName>
        <columns>MX_SB_VTS_Folio_Cotizacion__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>MX_SB_VTS_Movil_txt__c</columns>
        <columns>MX_SB_VTS_Email_txt__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>MX_SB_VTS_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_VTS_Folio_Cotizacion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MX_SB_VTS_Familia_Productos__c</field>
            <operation>equals</operation>
            <value>ASD</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>QUOTE.EMAIL</field>
            <operation>notContain</operation>
            <value>@BBVA.COM</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_Sucursal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>equals</operation>
            <value>Emitida</value>
        </filters>
        <label>Cotizaciones ASD Ganadas</label>
        <sharedTo>
            <group>MX_SB_VTS_AsesoresASD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_VTS_Cotizaciones_ASDCupon</fullName>
        <columns>MX_SB_VTS_Folio_Cotizacion__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>MX_SB_VTS_Movil_txt__c</columns>
        <columns>MX_SB_VTS_Email_txt__c</columns>
        <columns>MX_SB_VTS_Cupon__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>MX_SB_VTS_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_VTS_Folio_Cotizacion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MX_SB_VTS_Familia_Productos__c</field>
            <operation>equals</operation>
            <value>ASD</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>QUOTE.EMAIL</field>
            <operation>contains</operation>
            <value>@BBVA.COM</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_Sucursal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>notEqual</operation>
            <value>Emitida</value>
        </filters>
        <label>Cotizaciones ASD Sucursal</label>
        <sharedTo>
            <group>MX_SB_VTS_AsesoresASD</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_VTS_Cotizaciones_Hogar</fullName>
        <columns>MX_SB_VTS_Folio_Cotizacion__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>MX_SB_VTS_Movil_txt__c</columns>
        <columns>MX_SB_VTS_Email_txt__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>MX_SB_VTS_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_VTS_Folio_Cotizacion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MX_SB_VTS_Familia_Productos__c</field>
            <operation>equals</operation>
            <value>Hogar</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>QUOTE.EMAIL</field>
            <operation>notContain</operation>
            <value>@BBVA.COM</value>
        </filters>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>notEqual</operation>
            <value>Emitida</value>
        </filters>
        <label>Cotizaciones Hogar</label>
        <sharedTo>
            <group>MX_SB_VTS_SMART_CENTER_GROUP_OPPORTUNITY</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_VTS_Cotizaciones_HogarWon</fullName>
        <columns>MX_SB_VTS_Folio_Cotizacion__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>MX_SB_VTS_Movil_txt__c</columns>
        <columns>MX_SB_VTS_Email_txt__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>MX_SB_VTS_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_VTS_Folio_Cotizacion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MX_SB_VTS_Familia_Productos__c</field>
            <operation>equals</operation>
            <value>Hogar</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>QUOTE.EMAIL</field>
            <operation>notContain</operation>
            <value>@BBVA.COM</value>
        </filters>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>equals</operation>
            <value>Emitida</value>
        </filters>
        <label>Cotizaciones Hogar Emitidas</label>
        <sharedTo>
            <group>MX_SB_VTS_SMART_CENTER_GROUP_OPPORTUNITY</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_VTS_Cotizaciones_Vida</fullName>
        <columns>MX_SB_VTS_Folio_Cotizacion__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>MX_SB_VTS_Movil_txt__c</columns>
        <columns>MX_SB_VTS_Email_txt__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>MX_SB_VTS_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_VTS_Folio_Cotizacion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MX_SB_VTS_Familia_Productos__c</field>
            <operation>equals</operation>
            <value>Vida</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>QUOTE.EMAIL</field>
            <operation>notContain</operation>
            <value>@BBVA.COM</value>
        </filters>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>notEqual</operation>
            <value>Emitida</value>
        </filters>
        <label>Cotizaciones Vida</label>
        <sharedTo>
            <group>MX_SB_VTS_SMART_CENTER_GROUP_OPPORTUNITY</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_VTS_Cotizaciones_VidaWon</fullName>
        <columns>MX_SB_VTS_Folio_Cotizacion__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>MX_SB_VTS_Movil_txt__c</columns>
        <columns>MX_SB_VTS_Email_txt__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>MX_SB_VTS_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_VTS_Folio_Cotizacion__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MX_SB_VTS_Familia_Productos__c</field>
            <operation>equals</operation>
            <value>Vida</value>
        </filters>
        <filters>
            <field>MX_SB_VTS_CreatedDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>QUOTE.EMAIL</field>
            <operation>notContain</operation>
            <value>@BBVA.COM</value>
        </filters>
        <filters>
            <field>QUOTE.STATUS</field>
            <operation>equals</operation>
            <value>Emitida</value>
        </filters>
        <label>Cotizaciones Vida Emitidas</label>
        <sharedTo>
            <group>MX_SB_VTS_SMART_CENTER_GROUP_OPPORTUNITY</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>